# voice-assistant-navidrome

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SECURITY.md  docker-compose.yml  install.sh  performance_optimizer.py  pyproject.toml  requirements.txt  test_suite.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci-cd.yml  code-quality.yml  documentation.yml
config/: config.example.yaml  optimized_config.yaml
docker/: Dockerfile
docs/: subsonic_api.md  voice_assistant_documentation.md
src/: __init__.py  audio_input.py  main.py  music_controller.py  navidrome_client.py  nlp_processor.py  speech_recognition.py  wake_word.py
tests/: mock_navidrome_server.py  test_audio_input.py
